# LAM-PINN

./: Makefile  README.md  README.txt  pyproject.toml  requirements.txt
configs/: adapt.yaml  train.yaml
data/: README.txt
data/eval/: sample_task1.csv  sample_task10.csv  sample_task2.csv  sample_task3.csv  sample_task4.csv  sample_task5.csv  sample_task6.csv  sample_task7.csv  sample_task8.csv  sample_task9.csv
data/train/: task_metadata.csv
lam_pinn/: config.py
lam_pinn/cli/: adapt.py  train.py
lam_pinn/data/: ingestion.py  sampling.py
lam_pinn/engine/: adapt.py  checkpoints.py  meta_train.py
lam_pinn/evaluation/: metrics.py  visualize.py
lam_pinn/models/: serial_net.py
lam_pinn/physics/: losses.py  operators.py
lam_pinn/pretrained/: model_state_dict.pth
lam_pinn/utils/: device.py  logging.py  paths.py  seed.py
scripts/: run_adapt.py  run_train.py
tests/: test_imports.py
